# agent_orchestrator

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  gh_issue_18.md  gh_issue_20.md  gh_issue_27.md  gh_issue_39.md  gh_issue_57.md  lightweight_workflow.yaml  pyproject.toml  real_codex_wrapper.py  sdlc_agents_orchestrator_guide.md  workflow.yaml  workflow_backlog_miner.yaml  workflow_coverage_gap_filler.yaml  workflow_flaky_test_doctor.yaml  workflow_pr_review_fix.yaml
.github/workflows/: ci.yml
config/: email_notifications.yaml  poll_config_example.yaml
docs/: api_documentation.md  cost_optimization_roadmap.md  state_file_schema.md
prompts/: 06_code_review.md
schemas/: run_report.schema.json
scripts/: trigger_issue_workflow.sh
sdlc_agents_poc/: README.md  orchestrator.py  workflow.yaml
sdlc_agents_poc/demo_repo/: README.md
sdlc_agents_poc/demo_repo/.agents/: run_state.json
sdlc_agents_poc/docs/: AGENT_CONTRACT.md  ARCHITECTURE.md
sdlc_agents_poc/schemas/: run_report.schema.json
sdlc_agents_poc/scripts/: codex_exec_wrapper.py
src/agent_orchestrator/: __init__.py  cli.py  daily_stats.py  gating.py  git_worktree.py  guidance.py  memory.py  models.py  orchestrator.py  reporting.py  run_archive.py  run_cleanup.py  run_report_format.py  runner.py  state.py  time_utils.py  workflow.py
src/agent_orchestrator/notifications/: __init__.py  email.py
src/agent_orchestrator/polling/: __init__.py  executor.py  models.py
src/agent_orchestrator/prompts/: 01_planning.md  02_coding.md  03_e2e.md  04_manual.md  05_docs.md  06_code_review.md  07_pr_manager.md  08_architect_repo_review.md  08_cleanup.md  09_tech_debt_miner.md  10_backlog_consolidator.md  11_pr_reviewer.md  12_todo_creator.md  13_pr_fixer.md  14_pr_merger.md  15_ci_history_miner.md  16_flake_analyzer.md  17_test_rewriter.md  18_test_quarantine_manager.md  19_coverage_analyzer.md  19_todo_issue_sync.md  20_issue_label_manager.md  20_test_generator.md  21_coverage_validator.md  21_issue_picker.md  (+8 more)
tests/: test_daily_stats.py  test_email_notifications.py  test_git_worktree.py  test_guidance.py  test_issue_artifact_flow.py  test_loop_control.py  test_loopback.py  test_model_routing.py  test_models.py  test_notification_integration.py  test_polling.py  test_prompt_override_integration.py  test_prompt_resolution.py  test_prompts_architect_repo_review.py  test_reporting.py  test_run_cleanup.py  test_run_report_format.py  test_systemd_install_script.py  test_time_utils.py  test_workflow_loopback.py
(+74 files in other folders)
