[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "File-driven orchestrator for SDLC agent workflows"
readme = "README.md"
authors = [{ name = "SDLC Agents" }]
requires-python = ">=3.9"
dependencies = [
  "pyyaml",
  "jsonschema",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "jinja2>=3.0.0",
]

[project.scripts]
agent-orchestrator = "agent_orchestrator.cli:main"
